--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 </head>
 
 <body>
-    <div>
-        <h1>Skip The Diet,</h1>
-        <h1> Just Eat Healthy</h1>
-        <h1>With Food Network</h1>
-        <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
-    </div>
-    <div>
-        <img src="IMG_4443.JPG" alt="">
-    </div>
+    <section class="food-item">
+        <div class="half-width">
+            <h1><span class="orange">Skip</span> The Diet, Just Eat Healthy With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you</p>
+            <a class="link-btn" target="_blank" href="https://www.linkedin.com/in/md-mostafijur-rahman-8192b6244/">Oder
+                Food</a>
+        </div>
+        <div class="half-width">
+            <img src="images/food/Project Cover5.png" alt="">
+        </div>
+    </section>
 
 </body>
 
