--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
             <img src="images/food/Project Cover5.png" alt="">
         </div>
     </section>
+    <section class="about-me">
+        <div class="half-width">
+            <img src="images/food/Project Cover7.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel</p>
+            <a class="link-btn" target="_blank"
+                href="https://www.linkedin.com/in/md-mostafijur-rahman-8192b6244/">Contact Me</a>
+        </div>
+    </section>
 
 </body>
 
