added a new section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,29 @@
                 href="https://www.linkedin.com/in/md-mostafijur-rahman-8192b6244/">Contact Me</a>
         </div>
     </section>
+    <div>
+        <h1 class="text-1">My Recipies</h1>
+        <p class="text-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the
+            1500s.</p>
+    </div>
+    <section>
+
+        <div class="Recipie-1">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h1 class="asd">Recipie title</h1>
+            <p class="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s.</p>
+        </div>
+        <div class="Recipie-1">
+            <img src="images/food/Project Cover.jpg" alt="">
+            <h1 class="asd">Recipie title</h1>
+            <p class="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s.</p>
+        </div>
+    </section>
 
 </body>
 
