--- a/index.html
+++ b/index.html
@@ -62,6 +62,26 @@
                 1500s.</p>
         </div>
     </section>
+    <section class="" social">
+        <div class="alada">
+            <h1 class="asd">7.2M</h1>
+            <p class="lorem">Youtube flowers</p>
+        </div>
+        <div class="alada">
+            <h1 class="asd">14.7 M</h1>
+            <p class="lorem">Facebook flowers</p>
+        </div>
+        <div class="alada">
+            <h1 class="asd">8.5M</h1>
+            <p class="lorem">Instagram flowers</p>
+        </div>
+        </sectiion>
+        <div id="hobe">
+            <h1><span class="or">Eat</span></h1>
+            <h1><span class="gray">Fresh</span></h1>
+            <p class="sada">Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+
 
 </body>
 
